i18n/ja/docusaurus-plugin-content-docs/version-0.6.x/intro.md
---
sidebar_position: 1
---

# はじめに

**Gitti** は、Git 操作のための高速で軽量なターミナル UI です。キーボード操作を中心としたインターフェースにより、開発フローを中断することなく一般的な Git タスクを実行できるように設計されています。

## コア哲学

Gitti は主に 3 つのコンポーネントで構成されています：

1.  **ローカルブランチ** (左上)
2.  **変更されたファイル** (左中)
3.  **コミットログ / RefLog** (左下) — `< / >` で切り替え
4.  **スタッシュ** (左下)
5.  **ログパネル** (右下)

**詳細ビュー** (右パネル) は、選択内容に応じてコンテキストに合わせて更新されます。

## グローバルナビゲーション

| キー        | アクション                                   |
| :---------- | :------------------------------------------- |
| `1`         | **ローカルブランチ**にフォーカスを切り替え   |
| `2`         | **変更されたファイル**にフォーカスを切り替え |
| `3`         | **コミットログ / RefLog**にフォーカスを切り替え |
| `4`         | **スタッシュ**にフォーカスを切り替え         |
| `/`         | **ログパネル**にフォーカスを切り替え         |
| `tab`       | コンポーネントを順方向に切り替え             |
| `shift+tab` | コンポーネントを逆方向に切り替え             |
| `?`         | グローバルキーバインドのヘルプを開く         |

## クイックスタート {#getting-started}

1.  ターミナルを開きます。
2.  Git リポジトリに移動します。
3.  `gitti` を実行します。

現在のリポジトリの状態が表示されます。数字キー (`1`, `2`, `3`, `4`) を使用してパネル間を移動してください。
